<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_story"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@android:color/white"
    android:layout_gravity="center"
    android:padding="2dp"
    android:background="@android:color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/id_story_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_default="wrap"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintBottom_toTopOf="@+id/id_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="H,16:9"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/story_image" />

        <TextView
            android:id="@+id/id_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/name"
            style="@style/Standar"
            app:layout_constraintBottom_toTopOf="@+id/id_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_story_image" />

        <TextView
            android:id="@+id/id_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/description"
            android:maxLines="3"
            style="@style/Common"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>